Fixed padding on the header; Fixed form fields alignment on smaller phones

--- a/app/assets/stylesheets/signup.scss
+++ b/app/assets/stylesheets/signup.scss
@@ -27,6 +27,10 @@ p, a {
   font-family: $base-font;
 }
 
+.btn-primary {
+  background-color: #369;
+}
+
 /* Bootstrap overrides
  * ------------------------------------------------ */
 .navbar-default .navbar-toggle {
@@ -176,7 +180,7 @@ ul.nav {
   line-height: 59px;
 }
 
-#elevator-pitch span.lighter {
+#elevator-pitch .lighter {
   font-weight: 100;
 }
 
@@ -186,6 +190,7 @@ ul.nav {
       padding-left: 9%;
       height: 366px;
       width: 350px;
+
 
       a {
         color: $white;
@@ -402,10 +407,32 @@ p.tagline-highlight {
 /* RESPONSIVE
  * ------------------------------------------------ */
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
   .get-involved-region {
     .right {
       width: 50%;
+    }
+  }
+
+  .navbar-brand {
+    margin: 0;
+    padding: 0;
+
+    img {
+      float: left;
+      margin-left: 0;
+      margin-right: 5px;
+      margin-top: 15px;
+      display: inline-block;
+      width: 17%;
+    }
+
+    h1 {
+      float: left;
+      font-size: 2.1em;
+      display: inline-block;
+      width: 65%;
+      margin: 19px 0 0 0;
     }
   }
 }
@@ -418,8 +445,40 @@ p.tagline-highlight {
       margin-left: 25px;
     }
 
-    img {
-      width: 100%;
+    .navbar-brand {
+      border: 1px solid red;
+      img {
+        float: left;
+        margin-left: 9px;
+        margin-right: 5px;
+        display: inline-block;
+        width: 13%;
+      }
+
+      h1 {
+        float: left;
+        font-size: 1.6em;
+        display: inline-block;
+        width: 65%;
+        margin: 0;
+      }
+    }
+  }
+
+  .navbar-right {
+    text-align: left;
+    margin: 0;
+    padding: auto 0;
+  }
+
+  .tablet {
+
+    a {
+      color: #000;
+    }
+
+    a.btn-primary {
+      color: #fff;
     }
   }
 
@@ -500,10 +559,11 @@ p.tagline-highlight {
   }
 .navbar-right {
     text-align: left;
-    margin-left: 10px;
+    margin: 0;
+    padding: auto 0;
   }
   .navbar-brand {
-    padding-left: 10px;
+    padding: 10px 10px 14px 11px;
   }
 
   #elevator-pitch {
@@ -514,6 +574,7 @@ p.tagline-highlight {
       height: 130px;
     }
   #signup-form {
+      display: block;
       padding-left: 0;
       padding-top: 15px;
       text-align: center;
@@ -550,8 +611,6 @@ p.tagline-highlight {
   }
 
   .navbar-brand {
-    padding: 10px 10px 14px 26px;
-
     img {
       float: left;
       margin-left: 9px;
